# tp_fonctions

./: 1005.c  1007.c  1008.c  CMakeLists.txt  distributeur.c  distributeur.h  insta.c  insta.h  rectangle.c  rectangle.h
